# moviad

./: .gitignore  README.md  prova.py  pyproject.toml  requirements.txt  test.ipynb
docs/: conf.py  index.rst
examples/: train_stfpm_mvtec.py
moviad/backbones/mcunet/: pyproject.toml
moviad/trainers/: trainer_padim.py
moviad/utilities/evaluation/: evaluator.py
src/: __init__.py
src/backbones/micronet/: activation.py  microconfig.py  micronet.py  utils.py
src/common/: args.py  common_utils.py
src/datasets/: builder.py  iad_dataset.py
src/datasets/exceptions/: exceptions.py
src/datasets/miic/: miic_dataset.py
src/datasets/mvtec/: mvtec_dataset.py
src/datasets/realiad/: realiad_data.py  realiad_dataset.py  realiad_dataset_configurations.py
src/datasets/visa/: visa_data.py  visa_dataset.py
src/entrypoints/: cfa.py  common.py  padim.py  patchcore.py  rd4ad.py  stfpm.py
src/models/cfa/: cfa.py
src/models/components/cfa/: coordconv.py  descriptor.py
src/models/components/simplenet/: anomaly_generator.py  discriminator.py
src/models/fastflow/: fastflow.py
src/models/padim/: padim.py
src/models/paste/: README.md  backbones  stfpm.py
src/models/patchcore/: kmeans_coreset_extractor.py  knn_searcher.py  patchcore.py  product_quantizer.py
src/models/rd4ad/: rd4ad.py
src/models/stfpm/: stfpm.py
src/models/supersimplenet/: supersimplenet.py
src/moviad/: __init__.py  main.py
src/moviad/backbones/mcunet/: setup.py
src/moviad/datasets/: builder.py  dataset_arguments.py  vad_dataset.py
src/moviad/entrypoints/: args.py  cfa.py  common.py  padim.py  patchcore.py  rd4ad.py  stfpm.py
src/moviad/models/: __init__.py  training_args.py  vad_model.py
src/moviad/profiler/: pytorch_profiler.py  quantization_profiler.py
src/moviad/trainers/: __init__.py  batched_trainer_patchcore.py  trainer.py  trainer_cfa.py  trainer_ganomaly.py  trainer_paste.py  trainer_patchcore.py  trainer_rd4ad.py
src/moviad/utilities/: configurations.py  custom_feature_extractor.py  custom_feature_extractor_trimmed.py  distances.py  feature_extractor.py  model_size_comparison.py  pil_image_utils.py
src/profiler/: pytorch_profiler.py  quantization_profiler.py
src/trainers/: __init__.py  batched_trainer_patchcore.py  trainer.py  trainer_cfa.py  trainer_fastflow.py  trainer_ganomaly.py  trainer_padim.py  trainer_paste.py  trainer_patchcore.py  trainer_rd4ad.py  trainer_stfpm.py  trainer_supersimplenet.py
src/utilities/: custom_feature_extractor.py  custom_feature_extractor_trimmed.py  get_sizes.py  model_size_comparison.py
src/utilities/evaluation/: evaluator.py  metrics.py
tests/: test_torch_cuda.py
tests/test_continual/: test_continual_dataset.py  test_continual_strategies.py  test_stfpm_fine_tuning.py
tests/test_datasets/: test.ipynb  test_dataset_creations.py
tests/test_imports/: test_evaluation_import.py  test_import_backbones.py  test_import_common.py  test_import_datasets.py  test_import_entrypoints.py  test_import_models.py  test_import_moviad.py  test_import_profiler.py  test_import_trainers.py  test_import_utilities.py
tests/test_models/: test_cfa.py  test_patchcore.py  test_stfpm.py
(+39 files in other folders)
