[project]
name = "moviad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FrancescoBorsatti", email = "francesco.borsatti.1@studenti.unipd.it" }
]
requires-python = ">=3.13"
dependencies = [
    "faiss-gpu-cu11>=1.13.0",
    "matplotlib>=3.10.7",
    "micromind>=0.2.1",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
