[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcunet"
version = "0.1.1"
description = "MCUNet: Tiny Deep Learning on IoT Devices"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

authors = [
    {name = "MTI HAN LAB", email = "hanlab.eecs+github@gmail.com"},
]

urls = [  
    {Homepage = "https://github.com/mit-han-lab/mcunet"}
]

dependencies = [
    "torch",
    "torchvision"
]

[tool.setuptools.packages.find]
exclude = ["*test*"]
